--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -33,9 +33,12 @@ a:hover {
   text-decoration: underline;
 }
 
+svg{
+  /*width: 100%;*/
+  /*height: 100vw;*/
+}
 polyline{
   stroke: #432445;
-  stroke-width: 5px;
+  stroke-width: 1px;
   fill: none;
-
 }
