--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -5,7 +5,7 @@
   padding-top: 72px;
   -webkit-font-smoothing: antialiased;
   font-size: 1.125em;
-  color: #333;
+  color: #eee;
   line-height: 1.5em;
 }
 html{
@@ -35,13 +35,30 @@ a:hover {
   text-decoration: underline;
 }
 
+.display{
+  display: flex;
+}
+
 svg{
+  zoom:2;
+  margin: auto;
   /*width: 100%;*/
   /*height: 100vw;*/
 }
-polyline, polygon{
+circle{
+  fill: #ffe;
+}
+polygon{
   /*stroke: #fff;*/
   stroke-width: 1px;
-  fill: #ffe;
+  fill: #444;
   stroke-linejoin: round;
+}
+
+polyline {
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  stroke: #fff;
+  stroke-width: 1px;
+  fill: none;
 }
