--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -51,9 +51,10 @@ a:hover {
   fill: #ffe;
 }
 .display polygon{
-  /*stroke: #fff;*/
-  stroke-width: 1px;
-  fill: #fff;
+  stroke: #fff;
+  stroke-width: 0.5px;
+  opacity: 0.5;
+  fill-opacity: 0.0;
   stroke-linejoin: round;
 }
 .display polyline,path {
